Partially fixed alignment of logo and name.

--- a/style.css
+++ b/style.css
@@ -32,10 +32,6 @@ a {
 	min-height: 70px;
 }
 
-#header img {
-	vertical-align: bottom;
-}
-
 .pagename a {
 	color: #1a1a1a;
 	font-family: Georgia, "Times New Roman", serif;
@@ -44,6 +40,7 @@ a {
 	letter-spacing: 1px;
 	margin-left: 5px;
 	text-transform: capitalize;
+	vertical-align: 1px;
 }
 
 .pagename a:hover {
@@ -78,7 +75,7 @@ a {
 .tabmenu {
 	display: block;
 	height: 19px;
-	margin: 15px 0 0 50px;
+	margin: 12px 0 0 50px;
 }
 
 .tabmenu li {
